--- a/StepperController/MainWindow.xaml
+++ b/StepperController/MainWindow.xaml
@@ -20,20 +20,41 @@
         <Label Grid.Row="0" Grid.Column="0"
                VerticalAlignment="Center"
                HorizontalAlignment="Left"
-               Margin="20,0,0,8"
+               Margin="20,0,0,0"
                Foreground="White"
                FontSize="28">
             Stepper Controller
         </Label>
 
-        <Image Grid.Row="0"
-               Height="50"
-               Source="Images/cara.png"
-               HorizontalAlignment="Right"
-               VerticalAlignment="Center"
-               Margin="0,0,20,0" />
+        <Button Grid.Row="0"
+                HorizontalAlignment="Right"
+                Margin="20,0"
+                Height="48"
+                    BorderThickness="0"
+                    x:Name="BtnStop"
+                Click="BtnStop_OnClick">
+            <Button.Background>
+                <LinearGradientBrush StartPoint="0,0" EndPoint="1,2">
+                    <GradientStop Color="Red" Offset="0.0" />
+                    <GradientStop Color="DarkRed" Offset="1" />
+                </LinearGradientBrush>
+            </Button.Background>
+            <Button.Resources>
+                <Style TargetType="Border">
+                    <Setter Property="CornerRadius" Value="6" />
+                </Style>
+            </Button.Resources>
+            <Label
+                    VerticalAlignment="Center"
+                    Foreground="WhiteSmoke"
+                    FontWeight="Bold"
+                    FontSize="18">
+                Stop
+            </Label>
+        </Button>
 
         <Grid Grid.Row="1"
+              Margin="20,0"
               x:Name="GridButtons">
 
             <Grid.RowDefinitions>
@@ -52,14 +73,13 @@
             <Label Grid.Row="0" Grid.Column="0"
                    VerticalAlignment="Center"
                    HorizontalAlignment="Left"
-                   Margin="20,0,0,0"
                    Foreground="White"
                    FontSize="18">
                 Simple Step
             </Label>
 
             <Button Grid.Row="0" Grid.Column="1"
-                    Margin="10, 20"
+                    Margin="0,20,10,20"
                     BorderThickness="0"
                     x:Name="BtnSimpleCw"
                     Click="BtnSimpleCw_OnClick">
@@ -84,7 +104,7 @@
             </Button>
 
             <Button Grid.Row="0" Grid.Column="2" 
-                    Margin="10, 20"
+                    Margin="10,20,0,20"
                     BorderThickness="0"
                     x:Name="BtnSimpleCc"
                     Click="BtnSimpleCc_OnClick">
@@ -112,14 +132,13 @@
             <Label Grid.Row="1" Grid.Column="0"
                    VerticalAlignment="Center"
                    HorizontalAlignment="Left"
-                   Margin="20,0,0,0"
                    Foreground="White"
                    FontSize="18">
                 Full Step
             </Label>
 
             <Button Grid.Row="1" Grid.Column="1" 
-                    Margin="10, 20"
+                    Margin="0,20,10,20"
                     BorderThickness="0"
                     x:Name="BtnFullCw"
                     Click="BtnFullCw_OnClick">
@@ -144,7 +163,7 @@
             </Button>
 
             <Button Grid.Row="1" Grid.Column="2"
-                    Margin="10, 20"
+                    Margin="10,20,0,20"
                     BorderThickness="0"
                     x:Name="BtnFullCc"
                     Click="BtnFullCc_OnClick">
@@ -172,14 +191,13 @@
             <Label Grid.Row="2" Grid.Column="0"
                    VerticalAlignment="Center"
                    HorizontalAlignment="Left"
-                   Margin="20,0,0,0"
                    Foreground="White"
                    FontSize="18">
                 Half Step
             </Label>
 
             <Button Grid.Row="2" Grid.Column="1" 
-                    Margin="10, 20"
+                    Margin="0,20,10,20"
                     BorderThickness="0"
                     x:Name="BtnHalfCw"
                     Click="BtnHalfCw_OnClick">
@@ -204,7 +222,7 @@
             </Button>
 
             <Button Grid.Row="2" Grid.Column="2"
-                    Margin="10, 20"
+                    Margin="10,20,0,20"
                     BorderThickness="0"
                     x:Name="BtnHalfCc"
                     Click="BtnHalfCc_OnClick">
